--- a/Jiazhe.OpenSDK.Weixin/Jiazhe.OpenSDK.Weixin.csproj
+++ b/Jiazhe.OpenSDK.Weixin/Jiazhe.OpenSDK.Weixin.csproj
@@ -1,17 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>f2053e76-e32d-448b-a3e1-5769eb2b4f90</ProjectGuid>
+    <ProjectGuid>{F2053E76-E32D-448B-A3E1-5769EB2B4F90}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Jiazhe.OpenSDK.Weixin</RootNamespace>
     <AssemblyName>Jiazhe.OpenSDK.Weixin</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,24 +32,47 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\Jiazhe.Web\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Log\Log4Net.cs" />
+    <Compile Include="Log\LogHelper.cs" />
+    <Compile Include="MessagesHandlers\Response\Content\Event.cs" />
+    <Compile Include="MessagesHandlers\Response\Content\Image.cs" />
+    <Compile Include="MessagesHandlers\Response\Content\Text.cs" />
+    <Compile Include="MessagesHandlers\Response\ReplyType\Image.cs" />
+    <Compile Include="MessagesHandlers\Response\ReplyType\Music.cs" />
+    <Compile Include="MessagesHandlers\Response\ReplyType\news.cs" />
+    <Compile Include="MessagesHandlers\Response\ReplyType\Text.cs" />
+    <Compile Include="MessagesHandlers\Response\ReplyType\Video.cs" />
+    <Compile Include="MessagesHandlers\Response\ReplyType\Voice.cs" />
+    <Compile Include="MessagesHandlers\Response\ResponseHelp.cs" />
+    <Compile Include="MessagesHandlers\Tools\MessagesHelp.cs" />
+    <Compile Include="MessagesHandlers\Utilities\Developer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Demo\NugetPack.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MessagesHandlers\Handle\" />
+    <Folder Include="MessagesHandlers\Request\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
